# src/swagger/timers_api_documentation.yaml
@@ -6,20 +6,44 @@ paths:
   /health:
     get:
       summary: Health Check
-      operationId: modules.controllers.healthController.health_check
+      operationId: modules.controllers.health_controller.health_check
       description: Check if the service is alive.
       tags:
         - Health Checks
       responses:
         '200':
           description: Application is alive.
-    
+  /users:
+    patch:
+      tags:
+        - Authorization
+        - Users
+      summary: Update users data
+      operationId: modules.controllers.auth_controller.update_user
+      requestBody:
+        description: User properties
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserDataObject'
+      responses:
+        '204':
+          description: Users data successfully updated.
+        '401':
+          description: Authorization failed - wrong login or password
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnauthorizedErrorObject'
+
   /login:
     post:
       tags:
         - Authorization
+        - Users
       summary: Login to application
-      operationId: modules.controllers.authorizationController.login_user
+      operationId: modules.controllers.auth_controller.login_user
       requestBody:
         description: Login parameters to get JWT Token
         required: true
@@ -45,8 +69,9 @@ paths:
     put:
       tags:
         - Authorization
+        - Users
       summary: Register new user to application
-      operationId: modules.controllers.authorizationController.register_user
+      operationId: modules.controllers.auth_controller.register_user
       requestBody:
         description: Registration user data
         required: true
@@ -67,7 +92,7 @@ paths:
       tags:
         - Actions
       summary: Get All Actions
-      operationId: modules.controllers.actionController.get_all_actions
+      operationId: modules.controllers.actions_controller.get_all_actions
       responses:
         '200':
           description: Ok
@@ -83,7 +108,7 @@ paths:
       security:
         - BearerToken: []
       summary: Create new Action
-      operationId: modules.controllers.actionController.create_action
+      operationId: modules.controllers.actions_controller.create_action
       requestBody:
           description: Data to create new Action
           required: true
@@ -118,7 +143,7 @@ paths:
   /actions/{action_id}:
     get:
       summary: Get action with specyfied Identity
-      operationId: modules.controllers.actionController.get_action
+      operationId: modules.controllers.actions_controller.get_action
       tags:
         - Actions
       parameters:
@@ -147,7 +172,7 @@ paths:
           description: Action with this identity doesn't exists.
     patch:
       summary: Update action with specyfied Idetity
-      operationId: modules.controllers.actionController.update_action
+      operationId: modules.controllers.actions_controller.update_action
       security:
         - BearerToken: []
       tags:
@@ -186,7 +211,7 @@ paths:
           description: Action with this identity doesn't exists.
     delete:
       summary: Delete specyfied Group
-      operationId: modules.controllers.actionController.delete_action
+      operationId: modules.controllers.actions_controller.delete_action
       security:
         - BearerToken: []
       tags:
@@ -209,7 +234,7 @@ paths:
   /groups:
     get:
       summary: Get all Groups
-      operationId: modules.controllers.groupController.get_all_groups
+      operationId: modules.controllers.groups_controller.get_all_groups
       tags:
         - Groups
       responses:
@@ -223,7 +248,7 @@ paths:
                   $ref: '#/components/schemas/GroupObject'
     post: 
       summary: Create new Group
-      operationId: modules.controllers.groupController.create_group
+      operationId: modules.controllers.groups_controller.create_group
       security:
         - BearerToken: []
       tags:
@@ -256,7 +281,7 @@ paths:
   /groups/{group_id}:
     get:
       summary: Get specyfied Group
-      operationId: modules.controllers.groupController.get_group
+      operationId: modules.controllers.groups_controller.get_group
       tags:
         - Groups
       parameters:
@@ -285,7 +310,7 @@ paths:
           description: Group with this identity doesn't exists.
     patch:
       summary: Update Group data
-      operationId: modules.controllers.groupController.update_group
+      operationId: modules.controllers.groups_controller.update_group
       security:
         - BearerToken: []
       tags:
@@ -324,7 +349,7 @@ paths:
           description: Group with this identity doesn't exists.
     delete:
       summary: Delete specyfied Group
-      operationId: modules.controllers.groupController.delete_group
+      operationId: modules.controllers.groups_controller.delete_group
       security:
         - BearerToken: []
       tags:
@@ -347,7 +372,7 @@ paths:
   /records:
     get:
       summary: Get all Records
-      operationId: modules.controllers.recordController.get_all_records
+      operationId: modules.controllers.records_controller.get_all_records
       tags:
         - Records
       responses:
@@ -361,7 +386,7 @@ paths:
                   $ref: '#/components/schemas/RecordObject'
     post:
       summary: Create new Record
-      operationId: modules.controllers.recordController.create_record
+      operationId: modules.controllers.records_controller.create_record
       security:
         - BearerToken: []
       tags:
@@ -394,7 +419,7 @@ paths:
   /records/{record_id}:
     get:
       summary: Get specyfied Record
-      operationId: modules.controllers.recordController.get_record
+      operationId: modules.controllers.records_controller.get_record
       tags:
         - Records
       parameters:
@@ -423,7 +448,7 @@ paths:
           description: Record with this identity doesn't exists.
     delete:
       summary: Delete specyfied Record
-      operationId: modules.controllers.recordController.delete_record
+      operationId: modules.controllers.records_controller.delete_record
       security:
         - BearerToken: []
       tags:
@@ -495,10 +520,21 @@ components:
         email:
           type: string
           format: email
+          description: User email adress
       required:
         - login
         - password
         - email
+    UpdateUserDataObject:
+      properties:
+        password:
+          type: string
+          format: password
+          description: User new password
+        email:
+          type: string
+          format: email
+
     CreateActionObject:
       properties:
         group_id:
@@ -510,7 +546,8 @@ components:
           default: true
       required:
         - group_id
-        - name 
+        - name
+        - active
     UpdateActionObject:
       properties:
         group_id:
@@ -538,6 +575,7 @@ components:
           default: true
       required:
         - name
+        - active
     UpdateGroupObject:
       properties:
         name:
